[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalweave"
version = "0.1.0"
description = "Dependency-light signal processing toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "alfianmushh"}]
keywords = ["signal-processing", "dsp", "filtering", "spectral-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4"]

[project.scripts]
signalweave = "signalweave.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
